--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,10 @@
 <nav>
-    <a>Home</a>
-    <a>About</a>
-    <a>Services</a>
-    <a>Schedule</a>
-    <a>Account</a>
+    <img class="logo-img" src="https://cdn-icons-png.flaticon.com/512/88/88504.png" alt="logo">
+    <div class="nav-container">
+        <a routerLink="/">Home</a>
+        <a>About</a>
+        <a routerLink="/services">Services</a>
+        <a>Schedule</a>
+        <a>Account</a> 
+    </div>
 </nav>
