--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,16 @@ body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+button {
+    padding: 12px 20px 12px 20px;
+    margin-top: 20px;
+    font-size: 80%;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background-color: #10C9C3;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
