--- a/src/styles.css
+++ b/src/styles.css
@@ -15,4 +15,25 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 5px;
+    transition: all 0.3s;
+}
+
+button:hover {
+    background-color: white;
+    color: #10C9C3;
+    transition: all 0.3s;
+}
+
+.gray-text {
+    color: gray;
+}
+
+.blue-text {
+    color: #10C9C3;
+}
+
+.main-container {
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 50px;
 }
