implemented modal window

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,6 +5,7 @@
         <a>About</a>
         <a routerLink="/services">Services</a>
         <a>Schedule</a>
-        <a>Account</a> 
+        <a routerLink="/account">Account</a> 
+        <a routerLink="/forAdmins">For Admins</a>
     </div>
 </nav>
