--- a/src/app/components/spa-service/spa-service.component.html
+++ b/src/app/components/spa-service/spa-service.component.html
@@ -9,7 +9,7 @@
         <span><span class="blue-text">Price: </span>{{ spaService.price | currency: 'BYN ' }}</span>
     </div>
     
-    <button class="with-border">get</button>
+    <button class="btn-with-border">get</button>
     
 </div>
 
