implemented service type creation

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <form class="flex-form" [formGroup]="form" (ngSubmit)="submit()">
     <input class="modal-input" type="text" placeholder="Login" formControlName="login">
-    <p class="error-message-under-field" *ngIf="login.errors?.required && login.touched">
+    <p class="error-message-under-field" *ngIf="login.errors?.required">
         Login is required!
     </p>
 
     <input class="modal-input" type="text" placeholder="Password" formControlName="password">
-    <p class="error-message-under-field" *ngIf="password.errors?.required && password.touched">
+    <p class="error-message-under-field" *ngIf="password.errors?.required">
         Password is required!
     </p>
-    <p class="error-message-under-field" *ngIf="password.errors?.minlength && password.touched">
+    <p class="error-message-under-field" *ngIf="password.errors?.minlength">
         Password should consist of 6 symbols or more!
     </p>
     
