--- a/src/app/pages/admins-page/admins-page.component.html
+++ b/src/app/pages/admins-page/admins-page.component.html
@@ -1,1 +1,21 @@
-<p>admins-page works!</p>
+<div class="main-container">
+    
+    <div class="flex-block">
+        <button class="btn-with-border" (click)="modalService.open('photo')">Create Photo</button>
+        <br>
+        <button class="btn-with-border" (click)="modalService.open('serviceType')">Create Service Type</button>
+    </div>
+    
+    <div *ngIf="modalService.isPhoto$ | async">
+        <app-modal title="Create Photo" *ngIf="modalService.isVisible$ | async">
+            <app-create-photo></app-create-photo>
+        </app-modal>
+    </div>
+
+    <div *ngIf="modalService.isServiceType$ | async">
+        <app-modal title="Create Service Type" *ngIf="modalService.isVisible$ | async">
+            <app-create-service-type></app-create-service-type>
+        </app-modal>
+    </div>
+    
+</div>
