--- a/src/app/pages/account-page/account-page.component.html
+++ b/src/app/pages/account-page/account-page.component.html
@@ -1,10 +1,14 @@
 <div class="main-container">
-    <div *ngIf="!isAuthorized">
+    <div *ngIf="!authService.isAuthorized()">
         <button class="btn-with-border" (click)="modalService.open('login')">Log In</button>
-        <button class="btn-with-border" style="margin-left: 20px;">Register</button>
+        <button class="btn-with-border" 
+            style="margin-left: 20px;"
+            (click)="modalService.open('register')">
+            Register
+        </button>
     </div>
 
-    <div *ngIf="isAuthorized">
+    <div *ngIf="authService.isAuthorized()">
         <button class="btn-with-border">Log Out</button>
     </div>
 
@@ -14,11 +18,9 @@
         </app-modal>
     </div>
     
-    
-    <!-- <div *ngIf="userService.users">
-        <app-user
-             *ngFor="let user of userService.users"
-             [user]="user">
-         </app-user> 
-     </div> -->
+    <div *ngIf="modalService.isRegister$ | async">
+        <app-modal title="Registration" *ngIf="modalService.isVisible$ | async">
+            <app-register></app-register>
+        </app-modal>
+    </div>
 </div>
