--- a/src/app/pages/admins-page/admins-page.component.html
+++ b/src/app/pages/admins-page/admins-page.component.html
@@ -1,9 +1,9 @@
 <div class="main-container">
     
     <div class="flex-block">
-        <button class="btn-with-border" (click)="modalService.open('photo')">Create Photo</button>
+        <button class="btn-with-border" (click)="modalService.open(photo)">Create Photo</button>
         <br>
-        <button class="btn-with-border" (click)="modalService.open('serviceType')">Create Service Type</button>
+        <button class="btn-with-border" (click)="modalService.open(serviceType)">Create Service Type</button>
     </div>
     
     <div *ngIf="modalService.isPhoto$ | async">
