added Belarus number mask

--- a/src/app/components/modal-windows/login/login.component.html
+++ b/src/app/components/modal-windows/login/login.component.html
@@ -4,7 +4,7 @@
         Login is required!
     </p>
 
-    <input class="modal-input" type="text" placeholder="Password" formControlName="password">
+    <input class="modal-input" type="password" placeholder="Password" formControlName="password">
     <p class="error-message-under-field" *ngIf="password.errors?.required">
         Password is required!
     </p>
