--- a/src/app/pages/account-page/account-page.component.css
+++ b/src/app/pages/account-page/account-page.component.css
@@ -29,15 +29,32 @@ h3 {
     flex-direction: row;
 }
 
+.account-info-left {
+    width: 30%;
+}
 .account-info-right {
-    margin-top: 43px;
-    margin-left: 50px;
+    width: 50%;
 }
 
-img {
+.user-photo {
     display: block;
-    width: 300px;
-    height: 300px;
+    background-color: #DCE8FF;
+    background-image: url('https://paramount-events.ru/img/noimg.png');
+    background-size: 100%;
+    width: 305px;
+    height: 305px;
     border: 1px solid #10C9C3;
     border-radius: 5px;
 }
+
+.mini-btn {
+    margin: 0 0 0 5px;
+    padding: 7px 15px 6px 15px;
+    border: 1px solid #10C9C3;
+}
+
+.phone-form {
+    margin-top: 5px;
+    margin-bottom: 95px;
+}
+
