--- a/src/app/pages/account-page/account-page.component.css
+++ b/src/app/pages/account-page/account-page.component.css
@@ -29,13 +29,6 @@ h3 {
     flex-direction: row;
 }
 
-.account-info-left {
-    width: 30%;
-}
-.account-info-right {
-    width: 50%;
-}
-
 .user-photo {
     display: block;
     background-color: #DCE8FF;
@@ -58,3 +51,29 @@ h3 {
     margin-bottom: 95px;
 }
 
+@media screen and (min-width: 1280px) {
+    .account-info-left {
+        width: 30%;
+    }
+    .account-info-right {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1280px) {
+    .account-info-left {
+        width: 35%;
+    }
+    .account-info-right {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+    .account-info-left {
+        width: 40%;
+    }
+    .account-info-right {
+        width: 50%;
+    }
+}
