--- a/src/app/components/modal-windows/register/register.component.html
+++ b/src/app/components/modal-windows/register/register.component.html
@@ -49,10 +49,10 @@
         Confirmed password should include at least one digit and one lowercase letter!
     </p>
 
-    <select class="modal-input" multiple formControlName="roles">
+    <!-- <select class="modal-input" multiple formControlName="roles">
         <option value="Admin">Admin</option>
         <option value="Manager">Manager</option>
-    </select>
+    </select> -->
     
     <button class="btn-with-border" type="submit">Register</button>
 </form>
