--- a/src/app/components/service-type/service-type.component.html
+++ b/src/app/components/service-type/service-type.component.html
@@ -31,6 +31,6 @@
     </div>
     
     <img 
-        [src]="serviceType.photoUrl" 
+        [src]="serviceType.photoSrc" 
         [alt]="serviceType.name">
 </div>
