--- a/src/app/pages/admins-page/admins-page.component.html
+++ b/src/app/pages/admins-page/admins-page.component.html
@@ -4,17 +4,14 @@
         <button class="btn-with-border" (click)="modalService.open(photo)">Create Photo</button>
         <br>
         <button class="btn-with-border" (click)="modalService.open(serviceType)">Create Service Type</button>
-        
-        <!-- Next code can be used just by certain people -->
-        <!-- <br>
-        <button class="btn-with-border" (click)="createPersonsForUsers()">Create Persons</button> -->
     </div>
     
-    <div *ngIf="modalService.isPhoto$ | async">
+    <!-- TODO: solve -->
+    <!-- <div *ngIf="modalService.isPhoto$ | async">
         <app-modal title="Create Photo" *ngIf="modalService.isVisible$ | async">
             <app-create-photo></app-create-photo>
         </app-modal>
-    </div>
+    </div> -->
 
     <div *ngIf="modalService.isServiceType$ | async">
         <app-modal title="Create Service Type" *ngIf="modalService.isVisible$ | async">
