--- a/src/styles.css
+++ b/src/styles.css
@@ -68,3 +68,12 @@ hr {
     height: 1px;
     border: none;
 }
+
+.search-input {
+    width: 400px;
+    padding: 5px 0 5px 10px;
+    border: 1px solid #10C9C3;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
